# pathfinder

./: .env.example  .gitignore  SESSION_EXPORT.md  envar  pyproject.toml  spotify_context.json
exploration/: exploration_summary.json  final_model.json  step_001_observation.json
exploration/20260406-055151-f4a6/: exploration_summary.json  final_model.json  run-log
exploration/20260406-055739-e270/: exploration_summary.json  final_model.json  run-log  step_001_observation.json  step_002_observation.json  step_003_observation.json  step_004_observation.json  step_005_observation.json  step_006_observation.json  step_007_observation.json  step_008_observation.json  step_009_observation.json  step_010_observation.json  step_011_observation.json  step_012_observation.json  step_013_observation.json  step_014_observation.json  step_015_observation.json  step_016_observation.json  step_017_observation.json  step_018_observation.json  step_019_observation.json
exploration/20260406-063355-41bf/: exploration_summary.json  final_model.json  invocation  run-log  step_001_observation.json  step_002_observation.json  step_003_observation.json  step_004_observation.json  step_005_observation.json  step_006_observation.json  step_007_observation.json  step_008_observation.json  step_009_observation.json  step_010_observation.json  step_011_observation.json  (+39 more)
meta/: architecture.md  claude-ur-prompt  conversation-transcript.md
pathfinder/: __init__.py  cli.py  events.py  server.py  visualise.py
pathfinder-studio/: main.js  package-lock.json  package.json
scripts/: setup.sh
(+369 files in other folders)
