[project]
name = "pathfinder"
version = "0.1.0"
description = "AI-driven application flow discovery and exploration"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    # AI providers
    "anthropic>=0.40.0",

    # Android device interaction
    "uiautomator2>=3.0.0",
    "Pillow>=10.0.0",

    # Web device interaction
    "playwright>=1.40.0",

    # Data handling
    "pydantic>=2.0.0",

    # CLI
    "click>=8.1.0",
    "rich>=13.0.0",

    # Async
    "aiofiles>=23.0.0",

    # Server (IDE integration)
    "websockets>=12.0",

    # OpenAI-compatible providers
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.10.0",
    "ruff>=0.5.0",
]

[project.scripts]
pathfinder = "pathfinder.cli:main"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["pathfinder*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
